# yantrik-mind

./: .gitattributes  .gitignore  BUILD.md  CONTRIBUTING.md  Cargo.toml  NIGHT_SHIFT_CHARTER.md  README.md  RELEASE_NOTES.md  comm_smoke.db-shm  comm_smoke.db-wal  mind_smoke.db-shm  mind_smoke.db-wal
.github/workflows/: ci.yml  claude.yml
clients/: ym_voice.py
crates/mind-agents/: Cargo.toml
crates/mind-agents/src/: lib.rs
crates/mind-conversation/: Cargo.toml
crates/mind-conversation/src/: book.rs  briefing.rs  calendar.rs  cloud_photos.rs  code.rs  deals.rs  decisions.rs  dream.rs  egress_planning.rs  emissary.rs  emotion.rs  festivals.rs  finance.rs  foresight.rs  horizon.rs  lib.rs  mail.rs  members.rs  news.rs  onboarding.rs  pace_ledger.rs  people.rs  photo.rs  plugins.rs  plugins_mod.rs  proactive.rs  research.rs  skills.rs  studio.rs  support.rs  support_nudge.rs  tests.rs  timeline.rs  tool_catalog.rs  treasury.rs
crates/mind-core/: Cargo.toml
crates/mind-core/src/: lib.rs  main.rs  setup.rs  telegram.rs
crates/mind-cortex/: Cargo.toml
crates/mind-cortex/src/: lib.rs
crates/mind-evals/: Cargo.toml
crates/mind-evals/examples/: make_test_snapshot.rs
crates/mind-evals/src/: immune.rs  lib.rs  loop_eval.rs  main.rs
crates/mind-evolution/: Cargo.toml
crates/mind-evolution/src/: lib.rs
crates/mind-governance/: Cargo.toml
crates/mind-governance/src/: devices.rs  egress.rs  lib.rs
crates/mind-identity/: Cargo.toml
crates/mind-identity/src/: lib.rs
crates/mind-inference/: Cargo.toml
crates/mind-inference/src/: lib.rs
crates/mind-instincts/: Cargo.toml
crates/mind-instincts/src/: lib.rs
crates/mind-memory/: Cargo.toml
crates/mind-memory/src/: lib.rs  receipts.rs
crates/mind-memory/tests/: sync_feasibility.rs
crates/mind-observability/: Cargo.toml
crates/mind-observability/src/: lib.rs
crates/mind-perception/: Cargo.toml
crates/mind-perception/src/: lib.rs
crates/mind-proactive/: Cargo.toml
crates/mind-proactive/src/: lib.rs
crates/mind-recipes/: Cargo.toml
crates/mind-recipes/src/: lib.rs  store.rs
crates/mind-tools/: Cargo.toml
crates/mind-tools/src/: code.rs  coder.rs  executor.rs  github.rs  gphotos.rs  homeassistant.rs  lib.rs  mail.rs  markets.rs  mcp.rs  news.rs  onedrive.rs  paper.rs  sandbox.rs  search.rs  translate.rs  weather.rs  wikipedia.rs  workers.rs
crates/mind-types/: Cargo.toml
crates/mind-types/src/: action.rs  candidate.rs  clock.rs  error.rs  event.rs  harm.rs  lib.rs  memory.rs  safety.rs  task.rs  turn.rs
deploy/: DEPLOY.md  build_on_box.sh  forge_build.sh  headful_fetch.js  headless_fetch.js  immune-trial.service  immune-trial.timer  immune_trial.sh  install.sh  observatory.py  observatory.service  project_improve.sh  retrospective.py  self_build_common.sh  self_build_tick.sh  self_deploy.sh  self_improve.sh  self_release.sh  snap_page.js  voice_sidecar.py  yantrik-mind.env.example  yantrik-mind.service  ym
docs/: ARCH2_WIREGUARD_CHAT.md  ARCH3_SLICE2_EGRESS_CLEAN_PLANNING.md  PROOF-belief-revision.md  SCIFI_COMPANION_RESEARCH_2026-07.md  privacy.html
