[package]
name = "mind-agents"
version.workspace = true
edition.workspace = true

[dependencies]
mind-inference = { workspace = true }
mind-recipes = { workspace = true }
yantrik-ml = { workspace = true, default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
futures = "0.3"

[dev-dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
