[package]
name = "mind-conversation"
version.workspace = true
edition.workspace = true

[dependencies]
mind-types = { workspace = true }
mind-inference = { workspace = true }
mind-tools = { workspace = true }
yantrik-ml = { workspace = true, default-features = false }
tokio = { workspace = true }

[dev-dependencies]
mind-memory = { workspace = true }
mind-governance = { workspace = true }
