[package]
name = "mind-conversation"
version.workspace = true
edition.workspace = true

[dependencies]
mind-types = { workspace = true }
mind-inference = { workspace = true }
mind-tools = { workspace = true }
mind-recipes = { workspace = true }
mind-agents = { workspace = true }
yantrik-ml = { workspace = true, default-features = false }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", features = ["clock"] }
chrono-tz = "0.10"

[dev-dependencies]
mind-memory = { workspace = true }
mind-governance = { workspace = true }
