[package]
name = "mind-core"
version.workspace = true
edition.workspace = true

[dependencies]
mind-types = { workspace = true }
mind-memory = { workspace = true }
mind-inference = { workspace = true }
mind-conversation = { workspace = true }
mind-tools = { workspace = true }
yantrik-ml = { workspace = true, default-features = false, features = ["claude-cli", "api-llm"] }
tokio = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
ureq = { version = "2", features = ["json"] }
