[package]
name = "mind-evals"
version.workspace = true
edition.workspace = true

[dependencies]
mind-types = { workspace = true }
mind-memory = { workspace = true }
mind-inference = { workspace = true }
mind-conversation = { workspace = true }
yantrik-ml = { workspace = true, default-features = false }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
