[package]
name = "mind-governance"
version.workspace = true
edition.workspace = true

[dependencies]
mind-types = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
getrandom = "0.2"

[dev-dependencies]
tokio = { workspace = true }
