[package]
name = "mind-tools"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
ureq = { version = "2", features = ["json"] }
html2text = "0.12"
imap = "2"
native-tls = "0.2"
