[package]
name = "mind-tools"
version.workspace = true
edition.workspace = true

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
urlencoding = "2"
base64 = "0.22"
async-trait = { workspace = true }
anyhow = { workspace = true }
# `process` for the agentic coder + worker pool (spawns ssh/claude); `io-util` to pipe code into
# a worker's stdin (remote sandbox); `rt` for JoinSet (parallel worker map).
tokio = { workspace = true, features = ["process", "io-util", "rt"] }
serde_json = { workspace = true }
ureq = { version = "2", features = ["json"] }
html2text = "0.12"
imap = "2"
native-tls = "0.2"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "native-tls", "builder"] }
mind-types = { workspace = true }
